--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -1,10 +1,34 @@
 {{ define "leaderboard.tmpl" }}
+<!DOCTYPE html>
 <html>
-  <h1>
-    Leaderboard
-  </h1>
-  <ol>
-    {{ listofscores }}
-  </ol>
+ <title>Rabbit Leaderboard</title>
+ <style>
+    body {
+      background-image: url('assets/leaderboard_background.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+      overflow-y: hidden;
+      #centered {
+        display: table;
+        margin: 0 auto;
+        position: relative;
+        text-align: center;
+      }
+    }
+  </style> 
+  <div id=centered>
+    <img src="assets/leaderboard_leaderboard.png" alt="The leaderboard background"> 
+    <ol style="
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 30px;
+  ">
+      {{ listofscores }}
+    </ol>
+  </div>
 </html>
 {{ end }}
