--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -26,6 +26,7 @@
     transform: translate(-50%, -50%);
     color: white;
     font-size: 30px;
+    text-align: left;
   ">
       {{ listofscores }}
     </ol>
