--- a/frontend/templates/leaderboard.tmpl
+++ b/frontend/templates/leaderboard.tmpl
@@ -27,6 +27,8 @@
     color: white;
     font-size: 30px;
     text-align: left;
+    height: 600px;
+    overflow:auto;
   ">
       {{ listofscores }}
     </ol>
